fix: broken styles and align to all neutral (#210)
* Aligns all HSL color values to the Tailwind "Neutral" palette
* Fixes an issue where tailwind directives in multiple files broke
global styles.

--- a/tooling/config-tailwind/globals.css
+++ b/tooling/config-tailwind/globals.css
@@ -1,35 +1,31 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
 :root {
   --font-sans: 'Inter';
   --font-serif: 'Vollkorn';
   --font-mono: 'Fira Code';
 
   --background: 0 0% 100%;
-  --foreground: 240 10% 3.9%;
+  --foreground: 0 0% 14.9%;
 
   --muted: 0 0% 98%;
-  --muted-foreground: 240 3.8% 46.1%;
+  --muted-foreground: 0 0% 45.1%;
 
   --popover: 0 0% 100%;
-  --popover-foreground: 240 10% 3.9%;
+  --popover-foreground: 0 0% 14.9%;
 
   --card: 0 0% 100%;
-  --card-foreground: 240 10% 3.9%;
+  --card-foreground: 0 0% 14.9%;
 
-  --border: 240 5.9% 90%;
-  --input: 240 5.9% 90%;
+  --border: 0 0% 89.8%;
+  --input: 0 0% 89.8%;
 
-  --primary: 240 5.9% 10%;
+  --primary: 0 0% 14.9%;
   --primary-foreground: 0 0% 98%;
 
   --secondary: 240 4.8% 95.9%;
-  --secondary-foreground: 240 5.9% 10%;
+  --secondary-foreground: 0 0% 14.9%;
 
   --interactive: 240 4.8% 95.9%;
-  --interactive-foreground: 240 5.9% 10%;
+  --interactive-foreground: 0 0% 14.9%;
 
   --accent: 240 4.8% 95.9%;
   --accent-foreground: 240 5.2% 33.9%;
@@ -49,31 +45,31 @@
 }
 
 .dark {
-  --background: 240 5.9% 10%;
+  --background: 0 0% 9%;
   --foreground: 0 0% 98%;
 
-  --muted: 240 3.7% 12%;
-  --muted-foreground: 240 5% 64.9%;
+  --muted: 0 0% 14.9%;
+  --muted-foreground: 0 0% 63.9%;
 
-  --popover: 240 5.9% 10%;
+  --popover: 0 0% 9%;
   --popover-foreground: 0 0% 98%;
 
-  --card: 240 5.9% 10%;
+  --card: 0 0% 9%;
   --card-foreground: 0 0% 98%;
 
-  --border: 240 3.7% 15.9%;
-  --input: 240 5.3% 26.1%;
+  --border: 0 0% 14.9%;
+  --input: 0 0% 25.1%;
 
   --primary: 0 0% 98%;
-  --primary-foreground: 240 5.9% 10%;
+  --primary-foreground: 0 0% 9%;
 
-  --secondary: 240 3.7% 15.9%;
+  --secondary: 0 0% 14.9%;
   --secondary-foreground: 0 0% 98%;
 
   --interactive: 0 0% 3.92%;
   --interactive-foreground: 0 0% 98%;
 
-  --accent: 240 3.7% 15.9%;
+  --accent: 0 0% 14.9%;
   --accent-foreground: 0 0% 98%;
 
   --destructive: 0 84.2% 60.2%;
@@ -85,11 +81,5 @@
   --success: 160.1 84.1% 39.4%;
   --success-foreground: 0 0% 98%;
 
-  --ring: 240 3.7% 15.9%;
-}
-
-@layer base {
-  body {
-    @apply bg-background text-foreground;
-  }
+  --ring: 0 0% 14.9%;
 }
